Fri June 15 09:25:00  Robert Collins <rbtcollins@hotmail.com>
  
	* thread.cc (pthread_cond::Signal): Release the condition access
	variable correctly.

2001-06-14  Egor Duda  <deo@logos-m.ru>

	* fhandler.cc (fhandler_base::open): Set win32 access flags
	to 0, when requested.
	* fhandler.h: New status flag FH_QUERYOPEN.
	(fhandler::get_query_open): New function.
	(fhandler::set_query_open): Ditto.
	* syscalls.cc (stat_worker): Request query-only open mode.

2001-06-12  Egor Duda  <deo@logos-m.ru>

	* environ.cc (set_file_api_mode): New function. Move setting
	of file APIs mode (OEM/ANSI) here.
	(codepage_init): From here.
	* winsup.h (set_file_api_mode): Declare it.
	* fork.cc (fork_child): Set file APIs mode in forkee.

Mon Jun 11 14:19:49 2001  Christopher Faylor <cgf@cygnus.com>

	* pinfo.cc: Use autoloaded ToolHelp functions throughout for Win9x.
	* autoload.cc: Autoload ToolHelp functions.

	* sigproc.cc (proc_subproc): Incorporate SIGCHLD == SIG_IGN special
	handling of zombie processes.  Ensure that zombie processes which are
	at the end of the zombie array are properly cleaned up.

Mon Jun 11 11:18:56 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (chdir): Fix call to path_conv constructor so that it REALLY
	doesn't check for the null/non-empty path.

Sun Jun 10 23:34:09 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (path_conv::update_fs_info): Don't consider remote drives to
	be NTFS.  Set root_dir before invoking GetDriveType (from Kazuhiro
	Fujieda <fujieda@jaist.ac.jp>).  Eliminate extra checks for rootdir.

Sun Jun 10 20:19:47 2001  Christopher Faylor <cgf@cygnus.com>

	* path.cc (chdir): Pre-check path for validity before eating trailing
	space.  Then, ensure that path_conv doesn't check the path for validity
	again.

Sun Jun 10 12:56:00 2001  Christopher Faylor <cgf@redhat.com>

	* exceptions.cc (sigdelayed): Ensure that signal is cleared as
	the last operation or suffer races.